--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,6 +2,7 @@
 $background-color: #ffffff; // 변경될수도
 
 $color-black: #111111;
+$color-sub-black: #1e1e1e;
 $color-white: #ffffff;
 
 $translucent: #ffffff80;
