--- a/src/pages/styles/ReportPage.module.scss
+++ b/src/pages/styles/ReportPage.module.scss
@@ -104,9 +104,9 @@
         }
         .arcOverlay {
           position: absolute;
-          top: 35%;
+          top: 32%;
           left: -2%;
-          width: 100%; /* = 18.59vw */
+          width: 100%;
           height: 67%;
           pointer-events: none;
           overflow: visible;
