--- a/src/pages/businessResultPage/components/BusinessResult.module.scss
+++ b/src/pages/businessResultPage/components/BusinessResult.module.scss
@@ -43,9 +43,13 @@
   }
 }
 
+.resultItemBox {
+  @include m.flex-column-center;
+  gap: 1.56vw;
+}
+
 // ResultItem
 .resultItemContainer {
-  //background-color: rgb(230, 166, 5);
   @include m.flex-row-double-center;
   width: 90vw;
   height: 36.3vw;
@@ -66,14 +70,6 @@
         font-size: 1.04vw;
         font-weight: 700;
         color: $gray-800;
-      }
-
-      .resultTitle {
-        width: 28.59vw;
-        font-size: 1.67vw;
-        font-weight: 700;
-        color: $color-sub-black;
-        @include m.overflow-ellipsis;
       }
 
       // 정보(분야, 제목, 주관기관, 연락처 등)
@@ -151,6 +147,35 @@
         }
       }
     }
+
+    .coreContent {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      height: 100%;
+      padding: 1.04vw;
+      gap: 1.04vw;
+
+      span {
+        font-size: 1.25vw;
+        font-weight: 600;
+        color: $color-sub-black;
+      }
+      p {
+        font-size: 1.04vw;
+        font-weight: 500;
+        color: $color-sub-black;
+        margin-top: 0.42vw;
+      }
+    }
+  }
+
+  .resultTitle {
+    width: 28.59vw;
+    font-size: 1.67vw;
+    font-weight: 700;
+    color: $color-sub-black;
+    @include m.overflow-ellipsis;
   }
 
   .resultItemWarning {
