--- a/src/pages/businessResultPage/components/BusinessResult.module.scss
+++ b/src/pages/businessResultPage/components/BusinessResult.module.scss
@@ -77,11 +77,11 @@
         @include m.flex-row-double-center;
         gap: 1.25vw;
 
-        .infoBoxText {
+        .infoBoxText1,
+        .infoBoxText2 {
           display: flex;
           flex-direction: column;
           justify-content: space-around;
-          width: 16.93vw;
           height: 6.56vw;
           font-size: 1.25vw;
           font-weight: 500;
@@ -90,6 +90,12 @@
           p {
             @include m.overflow-ellipsis;
           }
+        }
+        .infoBoxText1 {
+          width: 13.93vw;
+        }
+        .infoBoxText2 {
+          width: 19.93vw;
         }
       }
 
@@ -183,4 +189,16 @@
     font-weight: 800;
     color: $main-color1;
   }
+}
+
+.detailButton {
+  @include m.flex-row-double-center;
+  width: 11.41vw;
+  height: 2.19vw;
+  background-color: $main-color1;
+  border-radius: 0.31vw;
+
+  font-size: 0.83vw;
+  font-weight: 700;
+  color: $color-white;
 }
