✨ : BusinessResultPage 뒤로가기 버튼

--- a/src/pages/businessResultPage/components/BusinessResult.module.scss
+++ b/src/pages/businessResultPage/components/BusinessResult.module.scss
@@ -193,6 +193,7 @@
 
 .detailButton {
   @include m.flex-row-double-center;
+  @include m.button-click;
   width: 11.41vw;
   height: 2.19vw;
   background-color: $main-color1;
