--- a/src/pages/formPage/components/InfoForm.module.scss
+++ b/src/pages/formPage/components/InfoForm.module.scss
@@ -112,29 +112,28 @@
   position: relative;
   width: 7.92vw;
   height: 2.19vw;
-  border: 0.05vw solid #000; /* ← style+color 포함해서 지정 */
-  border-radius: 0.42vw;
   background: #fff;
 }
 
 .selectTrigger {
   display: flex;
   align-items: center;
-  justify-content: center; /* 텍스트 가운데 정렬 */
-  gap: 0.42vw; /* 텍스트와 아이콘 사이 간격 */
+  justify-content: center;
+  gap: 0.42vw;
 
   width: 7.92vw;
   height: 2.19vw;
 
-  border: 0.05vw solid #000; /* 검정 테두리 */
-  border-radius: 0.42vw; /* 모서리 둥글게 */
+  border: 0.05vw solid #000;
+  border-radius: 0.42vw;
   background: #fff;
 
   font-size: 0.73vw;
-  font-weight: medium;
+  font-weight: 500;
   color: #000;
 
   cursor: pointer;
+  box-sizing: border-box;
 }
 
 .selectTriggerActive {
