💄:인포 질문 1 디자종 완성3

--- a/src/pages/formPage/components/InfoForm.module.scss
+++ b/src/pages/formPage/components/InfoForm.module.scss
@@ -288,6 +288,7 @@
   z-index: 50;
   width: 15.8vw;
   height: 31.5vw;
+  border-radius: 0 0.42vw 0.42vw 0;
   overflow-y: auto;
   background: #fff;
   box-shadow: 0 0.52vw 2.6vw rgba(0, 0, 0, 0.18);
