--- a/src/pages/styles/ReportPage.module.scss
+++ b/src/pages/styles/ReportPage.module.scss
@@ -167,6 +167,8 @@
       display: grid;
       grid-template-columns: repeat(2, 1fr);
       grid-template-rows: repeat(2, 1fr);
+      perspective: 2000px; /* 깊이감 */
+      perspective-origin: center; /* 시점 중앙 */
 
       //padding: 5.8vw 0 0 9.5vw;
 
@@ -182,7 +184,12 @@
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
-        animation: doorSwing 2s 1;
+
+        transform-origin: center; /* 회전축: 가운데 */
+        transform-style: preserve-3d;
+        backface-visibility: hidden;
+        will-change: transform;
+        animation: doorWobble 1800ms cubic-bezier(0.22, 0.61, 0.36, 1) forwards;
 
         p {
           width: 18.49vw;
@@ -195,21 +202,25 @@
         background-image: url("../../assets/images/swot-s.png");
         padding-left: 5.6vw;
         padding-top: 4vw;
+        animation-delay: 0ms;
       }
       .w {
         background-image: url("../../assets/images/swot-w.png");
         padding-right: 5.6vw;
         padding-top: 4vw;
+        animation-delay: 240ms;
       }
       .o {
         background-image: url("../../assets/images/swot-o.png");
         padding-left: 5.6vw;
         padding-top: 1.5vw;
+        animation-delay: 120ms;
       }
       .t {
         background-image: url("../../assets/images/swot-t.png");
         padding-right: 5.6vw;
         padding-top: 1.5vw;
+        animation-delay: 360ms;
       }
     }
 
@@ -246,26 +257,26 @@
   color: $gray-800;
 }
 
-@keyframes doorSwing {
+@keyframes doorWobble {
   0% {
     transform: rotateY(0deg);
   }
-  15% {
-    transform: rotateY(-10deg);
+  16% {
+    transform: rotateY(8deg);
+  } /* 오른쪽이 앞으로 */
+  32% {
+    transform: rotateY(-6deg);
+  } /* 왼쪽이 앞으로 */
+  48% {
+    transform: rotateY(4deg);
   }
-  30% {
-    transform: rotateY(6deg);
+  64% {
+    transform: rotateY(-2.5deg);
   }
-  45% {
-    transform: rotateY(-4deg);
-  }
-  60% {
-    transform: rotateY(2deg);
-  }
-  75% {
-    transform: rotateY(-1deg);
+  80% {
+    transform: rotateY(1.5deg);
   }
   100% {
     transform: rotateY(0deg);
-  }
+  } /* 완전히 멈춤 */
 }
