--- a/src/pages/styles/MainPage.module.scss
+++ b/src/pages/styles/MainPage.module.scss
@@ -1,8 +1,9 @@
 @use "../../styles/mixins" as m;
+@use "../../styles/variables" as *;
 
 .mainPageWrapper {
   @include m.flex-row-double-center;
-
+  position: relative;
   padding-left: 7.81vw;
   aspect-ratio: 1920 / 1080;
   background: url("../../assets/images/main-background.png") center/contain
@@ -27,5 +28,16 @@
     @include m.flex-row-center;
     gap: 0.63vw;
     margin-top: 4.17vw;
+  }
+
+  .warningText {
+    position: absolute;
+    left: 16.5%;
+    bottom: 3.07vw;
+    line-height: 1.4;
+    font-size: 0.83vw;
+    font-weight: 500;
+    color: $gray-300;
+    white-space: pre-line;
   }
 }
