--- a/src/components/styles/BasicButton.module.scss
+++ b/src/components/styles/BasicButton.module.scss
@@ -10,6 +10,7 @@
   font-size: 0.83vw;
   font-weight: 500;
   cursor: pointer;
+  padding: 0;
   transition: background-color 0.3s ease, color 0.3s ease, border 0.3s ease,
     transform 0.1s ease;
 
