--- a/src/components/styles/EmailPwBox.module.scss
+++ b/src/components/styles/EmailPwBox.module.scss
@@ -41,8 +41,9 @@
   padding: 0.5vw;
   backdrop-filter: blur(20px);
   -webkit-backdrop-filter: blur(20px);
-  box-shadow: inset 3px 3px 3px -2px $color-white,
-    inset -3px -3px 3px -2px $color-white, 0px 8px 12px rgba(4, 0, 250, 0.06);
+  box-shadow: inset 0.16vw 0.16vw 0.16vw -0.1vw $color-white,
+    inset -0.16vw -0.16vw 0.16vw -0.1vw $color-white,
+    0vw 0.42vw 0.63vw rgba(4, 0, 250, 0.06);
 
   &::placeholder {
     font-size: 0.83vw;
