--- a/src/components/styles/GradientBox.module.scss
+++ b/src/components/styles/GradientBox.module.scss
@@ -12,7 +12,7 @@
   border-radius: 0.94vw;
   overflow: hidden;
 
-  box-shadow: inset 5px 5px 3px -1px rgba(255, 255, 255, 1),
-    inset -4px -4px 6px -2px rgba(255, 255, 255, 1),
-    0px 8px 12px rgba(4, 0, 250, 0.18);
+  box-shadow: inset 0.26vw 0.26vw 0.16vw -0.05vw rgba(255, 255, 255, 1),
+    inset -0.21vw -0.21vw 0.31vw -0.1vw rgba(255, 255, 255, 1),
+    0vw 0.42vw 0.63vw rgba(4, 0, 250, 0.18);
 }
