--- a/src/pages/businessPage/components/Business.module.scss
+++ b/src/pages/businessPage/components/Business.module.scss
@@ -46,7 +46,7 @@
   @include m.button-click();
   background-color: $main-color1;
   gap: 0.1vw;
-  box-shadow: 0px 8px 26px rgba(0, 94, 255, 0.06);
+  box-shadow: 0vw 0.42vw 1.35vw rgba(0, 94, 255, 0.06);
 
   p {
     font-size: 0.83vw;
