--- a/src/pages/reportPage/components/Report.module.scss
+++ b/src/pages/reportPage/components/Report.module.scss
@@ -193,7 +193,7 @@
   }
   &::-webkit-scrollbar-thumb {
     background-color: $gray-300;
-    border-radius: 4px;
+    border-radius: 0.21vw;
   }
 
   > * {
