--- a/src/pages/styles/DocumentPage.module.scss
+++ b/src/pages/styles/DocumentPage.module.scss
@@ -3,14 +3,14 @@
 
 .container {
   width: 100%;
-  height: 100vh;
+  height: 56.25vw;
   overflow-y: scroll;
   scroll-snap-type: y mandatory;
 }
 
 .section {
   @include m.flex-row-center;
-  height: 100vh;
+  height: 100%;
   scroll-snap-align: center;
   background-color: green;
 }
