--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,15 +2,19 @@
 $background-color: #ffffff; // 변경될수도
 
 $color-black: #111111;
+$color-sub-black: #1e1e1e;
 $color-white: #ffffff;
 
 $translucent: #ffffff80;
 
 $main-color1: #0400fa;
+$main-color2: #8ebefa;
 
 $gray-300: #c4c4c4;
+$gray-400: #9d9d9d;
 $gray-500: #767676;
 $gray-700: #505050;
+$gray-800: #262626;
 
 // 자주 쓰는 색 있으면 추가
 
