--- a/src/pages/formPage/components/ConsiderForm.module.scss
+++ b/src/pages/formPage/components/ConsiderForm.module.scss
@@ -165,6 +165,7 @@
 
 .smallFontBtn {
   font-size: 0.63vw !important;
+  font-weight: 700;
   white-space: nowrap;
   word-break: keep-all;
 }
@@ -427,4 +428,5 @@
 
 .smallBtn {
   font-size: 0.63vw;
+  font-weight: 700;
 }
