--- a/src/components/styles/RightOrbit.module.scss
+++ b/src/components/styles/RightOrbit.module.scss
@@ -1,44 +1,42 @@
+@use "../../styles//mixins" as m;
+@use "../../styles/variables" as *;
+
 .ring {
   --ring-size: 43.75vw;
-  --ring-right: -27.6vw;
   --ring-top: 9.8vw;
-  --radius: 23.2vw;
-  --tick-right: -4.8vw;
-  --tick-top: 18.9vw;
-  --spin: 36s;
-
+  --shift: 85%;
   position: absolute;
   width: var(--ring-size);
   height: var(--ring-size);
-  border: 0.1vw solid #8ebefa;
+  border: 0.1vw solid $main-color2;
   border-radius: 50%;
-  transform: translateX(85%);
-  right: 0;
   top: var(--ring-top);
 }
 
+/* 오른쪽 앵커 */
+.sideRight {
+  right: 0;
+  transform: translateX(var(--shift));
+}
+
+/* 왼쪽 앵커 */
+.sideLeft {
+  left: 0;
+  transform: translateX(calc(-1 * var(--shift)));
+}
+
 .tick {
+  position: absolute;
 }
-
 .t1 {
-  position: absolute;
-  top: 23%;
-  left: -8.2%;
-  transform: rotate(45deg);
 }
-
 .t2 {
-  position: absolute;
-  top: 50%;
-  left: -9%;
-  transform: rotate(0deg);
 }
-
 .t3 {
-  position: absolute;
-  top: 77%;
-  left: -1%;
-  transform: rotate(-45deg);
+}
+.t4 {
+}
+.t5 {
 }
 
 .dot {
@@ -46,27 +44,27 @@
   width: 0.72vw;
   height: 0.72vw;
   border-radius: 50%;
-  background: #8ebefa;
+  background: $main-color2;
   margin-left: 0.72vw;
   margin-right: 0.42vw;
   vertical-align: middle;
 }
 
 .dot.on {
-  background: #0400fa;
+  background: $main-color1;
 }
 
 .label {
   display: inline-block;
   font-size: 0.83vw;
   font-weight: bold;
-  color: #0400fa;
+  color: $main-color1;
   vertical-align: middle;
   white-space: nowrap;
   letter-spacing: -0.01em;
 }
 
 .label.dim {
-  color: #8ebefa;
+  color: $main-color2;
   font-weight: 600;
 }
